# ghostpromt

./: .gitattributes  Cargo.toml  README.md  build.ps1  package-lock.json  package.json
.cargo/: config.toml
extension/: background.js  content-script.js  ghost-stream.js  injected-main.js  manifest.json  popup.html  popup.js  wasm-loader.js
extension/styles/: ghost.css  popup.css
src/: lib.rs  patterns.rs
tests/: ghost-name.test.js  ghost.test.js
