[package]
name = "ghost-prompt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen       = "0.2"
serde              = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json         = "1"
regex              = "1"
once_cell          = "1"
blake2             = "0.10"
hex                = "0.4"
getrandom          = { version = "0.2", features = ["js"] }
unicode-normalization = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
